--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,17 @@
         android:id="@+id/user_details" />
 
     <Button
-        android:text="@string/logout"
+        android:id="@+id/smsRedirect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10px"
+        android:text="@string/go_to_sms" />
+
+    <Button
         android:id="@+id/logout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10px"
+        android:text="@string/logout" />
 
 </LinearLayout>
