--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,15 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.QuickConnect" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+<!--        <item name="colorPrimary">#FF390F</item>-->
     </style>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
 
+        <!-- provided green color to the ActionBar -->
+        <item name="colorPrimary">#0F9D58</item>
+        <item name="colorPrimaryDark">@color/red</item>
+        <item name="colorAccent">@color/red</item>
+    </style>
     <style name="Theme.QuickConnect" parent="Base.Theme.QuickConnect" />
 </resources>
