--- a/app/src/main/res/layout/nav_employee_m_header.xml
+++ b/app/src/main/res/layout/nav_employee_m_header.xml
@@ -9,19 +9,19 @@
     android:background="@drawable/headerbkg"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
     <ImageView
-        android:id="@+id/nav_profile_e_cc"
+        android:id="@+id/nav_profilepic_e_m"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/nav_profile"/>
     <TextView
-        android:id="@+id/nav_header_email_e_cc"
+        android:id="@+id/nav_header_email_e_m"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="OCBC_QC@gmail.com"
         android:textColor="@color/white"
         android:textStyle="bold"/>
     <TextView
-        android:id="@+id/nav_header_contact_e_cc"
+        android:id="@+id/nav_header_contact_e_m"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="contact@androidknowledge.com"
