Video call , ai chatbot prototype , text to speech

--- a/app/src/main/res/menu/nav_customer_menu.xml
+++ b/app/src/main/res/menu/nav_customer_menu.xml
@@ -19,6 +19,11 @@
             android:icon="@drawable/nav_profile"
             android:title="@string/profile" />
 
+        <item
+            android:id="@+id/nav_c_vvcall"
+            android:icon="@drawable/nav_videocall"
+            android:title="@string/video_call" />
+
 
 
     </group>
