--- a/app/src/main/res/layout/activity_call_waiting_dashboard.xml
+++ b/app/src/main/res/layout/activity_call_waiting_dashboard.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
-            app:srcCompat="@drawable/baseline_arrow_back_24"
+            app:srcCompat="@drawable/ic_back"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <TextView
