--- a/app/src/main/res/layout/activity_add_customers.xml
+++ b/app/src/main/res/layout/activity_add_customers.xml
@@ -2,21 +2,53 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/customerRegisterLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.customer.Add_Customers"
-    android:orientation="vertical">
+    android:background="@drawable/gulincrop"
+    android:backgroundTint="#8A2B2A2A"
+    android:backgroundTintMode="src_over"
+    android:fadingEdge="horizontal|vertical"
+    android:fadingEdgeLength="100dp"
+    android:orientation="vertical"
+    android:requiresFadingEdge="horizontal|vertical"
+    tools:context="com.example.customer.Add_Customers">
 
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginTop="20dp"
+        app:srcCompat="@drawable/ic_action_name" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="@string/Register"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@color/white" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        app:boxBackgroundMode="none"
         tools:ignore="MissingConstraints">
+
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/username"
+            android:background="@drawable/roundedcorners"
+            android:backgroundTint="@color/material_dynamic_neutral90"
             android:hint="@string/username">
 
         </com.google.android.material.textfield.TextInputEditText>
@@ -26,11 +58,19 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        app:boxBackgroundMode="none"
         tools:ignore="MissingConstraints">
+
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/first_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/first_name"
+            android:background="@drawable/roundedcorners"
+            android:backgroundTint="@color/material_dynamic_neutral90"
             android:hint="@string/first_name">
 
         </com.google.android.material.textfield.TextInputEditText>
@@ -38,15 +78,22 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        app:boxBackgroundMode="none"
         tools:ignore="MissingConstraints">
+
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/last_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/last_name"
+            android:background="@drawable/roundedcorners"
+            android:backgroundTint="@color/material_dynamic_neutral90"
             android:hint="@string/last_name">
 
         </com.google.android.material.textfield.TextInputEditText>
@@ -54,48 +101,52 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
+    <!--    <com.google.android.material.textfield.TextInputLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        tools:ignore="MissingConstraints">-->
+    <!--        <com.google.android.material.textfield.TextInputEditText-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:id="@+id/usertype"-->
+    <!--            android:hint="@string/user_type">-->
 
+    <!--        </com.google.android.material.textfield.TextInputEditText>-->
 
+    <!--    </com.google.android.material.textfield.TextInputLayout>-->
 
-<!--    <com.google.android.material.textfield.TextInputLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        tools:ignore="MissingConstraints">-->
-<!--        <com.google.android.material.textfield.TextInputEditText-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:id="@+id/usertype"-->
-<!--            android:hint="@string/user_type">-->
+    <!--    <com.google.android.material.textfield.TextInputLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        tools:ignore="MissingConstraints">-->
 
-<!--        </com.google.android.material.textfield.TextInputEditText>-->
+    <!--        <com.google.android.material.textfield.TextInputEditText-->
+    <!--            android:id="@+id/supportteam"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:hint="support team">-->
 
-<!--    </com.google.android.material.textfield.TextInputLayout>-->
+    <!--        </com.google.android.material.textfield.TextInputEditText>-->
 
-<!--    <com.google.android.material.textfield.TextInputLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        tools:ignore="MissingConstraints">-->
-
-<!--        <com.google.android.material.textfield.TextInputEditText-->
-<!--            android:id="@+id/supportteam"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:hint="support team">-->
-
-<!--        </com.google.android.material.textfield.TextInputEditText>-->
-
-<!--    </com.google.android.material.textfield.TextInputLayout>-->
-
+    <!--    </com.google.android.material.textfield.TextInputLayout>-->
 
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        app:boxBackgroundMode="none"
         tools:ignore="MissingConstraints">
+
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/password"
+            android:background="@drawable/roundedcorners"
+            android:backgroundTint="@color/material_dynamic_neutral90"
             android:hint="@string/password">
 
         </com.google.android.material.textfield.TextInputEditText>
@@ -106,12 +157,19 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        app:boxBackgroundMode="none"
         tools:ignore="MissingConstraints">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/roundedcorners"
+            android:backgroundTint="@color/material_dynamic_neutral90"
             android:hint="@string/email">
 
         </com.google.android.material.textfield.TextInputEditText>
@@ -120,7 +178,11 @@
             android:id="@+id/add_user_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="#F44336"
             android:text="@string/add_user"
+            app:icon="@drawable/baseline_assignment_turned_in_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
