--- a/app/src/main/res/layout/activity_add_users.xml
+++ b/app/src/main/res/layout/activity_add_users.xml
@@ -78,7 +78,7 @@
         tools:ignore="MissingConstraints">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/supportteam"
+            android:id="@+id/support_team"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="support team">
