--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/loginLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/singaporeimgcrop"
+    android:backgroundTint="#59000000"
+    android:backgroundTintMode="src_over"
+    android:fadingEdge="horizontal|vertical"
+    android:fadingEdgeLength="200dp"
     android:orientation="vertical"
     android:padding="30dp"
+    android:scaleType="centerCrop"
     tools:context=".Login">
 
     <TextView
@@ -15,7 +21,8 @@
         android:text="Quick Connect"
         android:textColor="@color/red"
         android:textSize="35dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone" />
 
     <!--    <TextView-->
     <!--        android:layout_width="wrap_content"-->
@@ -26,130 +33,165 @@
     <!--        android:textSize="18dp"-->
     <!--        android:textStyle="bold" />-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="110dp"
-        android:text="Login"
-        android:textColor="@color/red"
-        android:textSize="29dp"
-        android:textStyle="bold" />
-
-    <com.google.android.material.textfield.TextInputLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="35dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="13dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        app:cardBackgroundColor="@color/common_google_signin_btn_tint"
+        app:cardElevation="0dp">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Username"
-            android:inputType="text"
-            android:id="@+id/login_username"/>
+            android:layout_height="200dp"
+            android:layout_marginTop="20dp">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/quickconnectlogo" />
+        </FrameLayout>
+    </androidx.cardview.widget.CardView>
 
-    <com.google.android.material.textfield.TextInputLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="35dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="13dp"
-        app:passwordToggleEnabled="true"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        android:background="@android:drawable/screen_background_light_transparent"
+        app:cardBackgroundColor="@color/material_dynamic_neutral99"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="8dp"
+        app:contentPadding="10dp"
+        app:contentPaddingBottom="20dp">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:id="@+id/login_password"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:id="@+id/logintext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="35dp"
+                android:text="Login"
+                android:textAlignment="center"
+                android:textColor="@color/red"
+                android:textSize="29dp"
+                android:textStyle="bold" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="35dp"
-        android:layout_marginLeft="25dp">
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="13dp"
+                android:layout_marginRight="35dp">
 
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
-            android:id="@+id/rememberMe"
-            android:text="Remember Me"/>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/login_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/roundedcorners"
+                    android:backgroundTint="@color/material_dynamic_neutral90"
+                    android:backgroundTintMode="add"
+                    android:hint="Username"
+                    android:inputType="text" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/forgetpassword"
-            android:text="Forget Password?"
-            android:layout_marginTop="13dp"
-            android:textColor="@color/black"
-            android:layout_alignParentEnd="true"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
-    </RelativeLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="13dp"
+                android:layout_marginRight="35dp"
+                android:background="@drawable/roundedcorners"
+                android:backgroundTint="@color/material_dynamic_neutral90"
+                android:backgroundTintMode="add"
+                app:passwordToggleEnabled="true">
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/login_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/roundedcorners"
+                    android:backgroundTint="@color/material_dynamic_neutral90"
+                    android:backgroundTintMode="add"
+                    android:hint="Password"
+                    android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/Loginbutton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="35dp"
-        android:background="@color/red"
-        android:backgroundTint="#E80C0C"
+            </com.google.android.material.textfield.TextInputLayout>
 
-        android:backgroundTintMode="add"
-        android:text="Login"
-        android:textColorHighlight="#FF0C0C"
-        android:textColorLink="#AF1212" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="35dp">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:layout_marginTop="6dp">
+                <CheckBox
+                    android:id="@+id/rememberMe"
+                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:buttonTint="@color/design_default_color_background"
+                    android:buttonTintMode="src_in"
+                    android:text="Remember Me" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dont have an account?"/>
+                <TextView
+                    android:id="@+id/forgetpassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="13dp"
+                    android:text="Forget Password?"
+                    android:textColor="@color/black" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:id="@+id/RedirectSignup"
-            android:text="Sign up"
-            android:textColor="@color/red"
-            android:textStyle="bold"/>
+            </RelativeLayout>
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/Loginbutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="35dp"
+                android:background="@color/red"
+                android:backgroundTint="#E80C0C"
 
+                android:backgroundTintMode="add"
+                android:text="Login"
+                android:textColorHighlight="#FF0C0C"
+                android:textColorLink="#AF1212"
+                tools:ignore="TextContrastCheck" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="6dp"
+                android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="172dp"
-            android:layout_height="159dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            app:srcCompat="@drawable/ocbc_qc_logo" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Dont have an account?" />
 
+                <TextView
+                    android:id="@+id/RedirectSignup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="Sign up"
+                    android:textColor="@color/red"
+                    android:textStyle="bold" />
 
-    </FrameLayout>
+            </LinearLayout>
+        </LinearLayout>
 
+    </androidx.cardview.widget.CardView>
 
 
 </LinearLayout>
